--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 /* LAYOUT */
 header {
   position: relative;
-  height: 35vh;
+  height: 55vh;
   border-bottom: 7px solid #eee;
 }
 
@@ -51,7 +51,7 @@ h1 {
   text-align: center;
   position: absolute;
   width: 100%;
-  top: 52%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -118,4 +118,124 @@ h1 {
 .scorehp {
   margin-bottom: 2rem;
   line-height: 2.5rem;
+}
+main {
+  margin: 5rem 1rem;
+}
+
+@media (max-width: 1366px) {
+  html {
+    font-size: 75%;
+  }
+  .number {
+    font-size: 4rem;
+    width: 12rem;
+    padding: 3rem 0rem;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 50%);
+  }
+}
+@media (max-width: 768px) {
+  html {
+    font-size: 58%;
+  }
+  .left {
+    width: 40rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 3rem;
+  }
+  p {
+    line-height: 2rem;
+    margin-bottom: 0.5rem;
+  }
+  .right {
+    width: 40rem;
+    font-size: 2rem;
+    margin-left: 3rem;
+  }
+  .guess {
+    background: none;
+    border: 3px solid #eee;
+    font-family: inherit;
+    color: inherit;
+    font-size: 3.6rem;
+    padding: 2.5rem;
+    width: 22rem;
+    text-align: center;
+    display: block;
+    margin-bottom: 3rem;
+  }
+}
+@media (max-width: 450px) {
+  html {
+    font-size: 40%;
+  }
+  .again {
+    position: absolute;
+    top: 2rem;
+    left: 30%;
+  }
+  .between {
+    font-size: 1.4rem;
+    position: absolute;
+    top: 10rem;
+    right: 10rem;
+  }
+  header {
+    position: relative;
+    height: 25vh;
+    border-bottom: 3px solid #eee;
+  }
+  .guess {
+    background: none;
+    border: 3px solid #eee;
+    font-family: inherit;
+    color: inherit;
+    font-size: 3.2rem;
+    padding: 2.2rem;
+    width: 18rem;
+    text-align: center;
+    display: block;
+    margin-bottom: 3rem;
+  }
+  .number {
+    font-size: 4rem;
+    width: 10rem;
+    padding: rem 0rem;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    -webkit-transform: translate(-50%, 50%);
+    -moz-transform: translate(-50%, 50%);
+    -ms-transform: translate(-50%, 50%);
+    -o-transform: translate(-50%, 50%);
+  }
+  .left {
+    width: 45rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 3rem;
+  }
+  p {
+    line-height: 2rem;
+    margin-bottom: 0.5rem;
+  }
+  .right {
+    width: 45rem;
+    font-size: 2rem;
+    margin-left: 3rem;
+  }
+  body {
+    width: 75%;
+    margin: auto;
+    height: auto;
+  }
 }
